--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -2,14 +2,6 @@
 <ui version="4.0">
  <class>SettingsDialog</class>
  <widget class="QWidget" name="SettingsDialog">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>241</width>
-    <height>182</height>
-   </rect>
-  </property>
   <property name="windowTitle">
    <string>Preferences</string>
   </property>
@@ -18,14 +10,6 @@
     <normaloff>:/images/icons/preferences_system.png</normaloff>:/images/icons/preferences_system.png</iconset>
   </property>
   <widget class="Line" name="lineHorizontal">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>130</y>
-     <width>241</width>
-     <height>2</height>
-    </rect>
-   </property>
    <property name="maximumSize">
     <size>
      <width>16777215</width>
@@ -43,14 +27,6 @@
    </property>
   </widget>
   <widget class="QWidget" name="bgGrey" native="true">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>140</y>
-     <width>241</width>
-     <height>41</height>
-    </rect>
-   </property>
    <property name="sizePolicy">
     <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
      <horstretch>0</horstretch>
@@ -60,15 +36,6 @@
    <property name="palette">
     <palette>
      <active>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>240</red>
-         <green>240</green>
-         <blue>240</blue>
-        </color>
-       </brush>
-      </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
@@ -80,15 +47,6 @@
       </colorrole>
      </active>
      <inactive>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>240</red>
-         <green>240</green>
-         <blue>240</blue>
-        </color>
-       </brush>
-      </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
@@ -100,15 +58,6 @@
       </colorrole>
      </inactive>
      <disabled>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>240</red>
-         <green>240</green>
-         <blue>240</blue>
-        </color>
-       </brush>
-      </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
@@ -125,14 +74,6 @@
     <bool>true</bool>
    </property>
    <widget class="QPushButton" name="buttonCancel">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>10</y>
-      <width>75</width>
-      <height>24</height>
-     </rect>
-    </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
@@ -148,14 +89,6 @@
     </property>
    </widget>
    <widget class="QPushButton" name="buttonOK">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>10</y>
-      <width>77</width>
-      <height>26</height>
-     </rect>
-    </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
@@ -173,60 +106,9 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="labelHint">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>10</y>
-      <width>16</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>0</width>
-      <height>28</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>16777215</width>
-      <height>28</height>
-     </size>
-    </property>
-    <property name="statusTip">
-     <string>Hover mouse pointer over dialog elements to get additional help</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="textFormat">
-     <enum>Qt::PlainText</enum>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignJustify|Qt::AlignTop</set>
-    </property>
-    <property name="wordWrap">
-     <bool>true</bool>
-    </property>
-   </widget>
    <widget class="QToolButton" name="buttonHelp">
     <property name="enabled">
      <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>23</width>
-      <height>22</height>
-     </rect>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
@@ -250,26 +132,9 @@
    </widget>
   </widget>
   <widget class="QWidget" name="bgWhite" native="true">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>239</width>
-     <height>121</height>
-    </rect>
-   </property>
    <property name="palette">
     <palette>
      <active>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
@@ -281,15 +146,6 @@
       </colorrole>
      </active>
      <inactive>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
@@ -301,15 +157,6 @@
       </colorrole>
      </inactive>
      <disabled>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
@@ -326,20 +173,12 @@
     <bool>true</bool>
    </property>
    <widget class="QGroupBox" name="groupRandomSettings">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>115</width>
-      <height>84</height>
-     </rect>
-    </property>
     <property name="title">
      <string>Random values:</string>
     </property>
     <layout class="QVBoxLayout">
      <item>
-      <layout class="QHBoxLayout">
+      <layout class="QHBoxLayout" name="_2">
        <item>
         <widget class="QLabel" name="labelRandMin">
          <property name="text">
@@ -369,7 +208,7 @@
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout">
+      <layout class="QHBoxLayout" name="_3">
        <item>
         <widget class="QLabel" name="labelRandMax">
          <property name="text">
@@ -401,26 +240,10 @@
     </layout>
    </widget>
    <widget class="QGroupBox" name="groupOutputSettings">
-    <property name="geometry">
-     <rect>
-      <x>131</x>
-      <y>10</y>
-      <width>95</width>
-      <height>88</height>
-     </rect>
-    </property>
     <property name="title">
      <string>Output settings:</string>
     </property>
     <widget class="QPushButton" name="buttonFont">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>24</y>
-       <width>75</width>
-       <height>24</height>
-      </rect>
-     </property>
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
@@ -436,14 +259,6 @@
      </property>
     </widget>
     <widget class="QPushButton" name="buttonColor">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>54</y>
-       <width>75</width>
-       <height>24</height>
-      </rect>
-     </property>
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
@@ -460,19 +275,14 @@
     </widget>
    </widget>
    <widget class="QCheckBox" name="cbAutosize">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>90</y>
-      <width>247</width>
-      <height>19</height>
-     </rect>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="statusTip">
-     <string>Automatically resize rows and columns when content changes</string>
+     <string>Automatically resize rows and columns to their contents</string>
     </property>
     <property name="text">
-     <string>Automatically resize rows and columns</string>
+     <string>Autosize of rows and columns</string>
     </property>
    </widget>
   </widget>
