--- a/resources/tspsg.qrc
+++ b/resources/tspsg.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/images" >
-        <file>icon.png</file>
+        <file>tspsg.png</file>
         <file>icons/back.png</file>
         <file>icons/button_cancel.png</file>
         <file>icons/button_ok.png</file>
