--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
+ <author>Lёppa: $Id$</author>
  <class>SettingsDialog</class>
  <widget class="QWidget" name="SettingsDialog">
   <property name="windowTitle">
