+ CTSPSolver class now deletes all solution tree on cleanup and delete to avoid memory leaks. + List of alternate candidates for branching is now saved in every solution step and displayed on output. + New struct TCandidate that represents a candidate for branching. * Renamed sStep to SStep and tMatrix to TMatrix. * Made a better and more readable About window. * English translation is now loaded too. This is needed to support plurals (e.g., 1 candidate, 4 candidates).

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -524,10 +524,10 @@
      <normaloff>:/images/icons/help_about.png</normaloff>:/images/icons/help_about.png</iconset>
    </property>
    <property name="text">
-    <string>&amp;About...</string>
+    <string>&amp;About TSPSG...</string>
    </property>
    <property name="iconText">
-    <string>About...</string>
+    <string>About TSPSG...</string>
    </property>
    <property name="statusTip">
     <string>About application</string>
